<resources>
    <string name="app_name">VC Remote</string>
    <!-- Bottom navigation bar -->
    <string name="nav_bottom_bar_home">Home</string>
    <string name="nav_bottom_bar_devices">Devices</string>
    <string name="nav_bottom_bar_settings">Settings</string>
    <!-- Home screen -->
    <string name="remaining_time_title">Remaining time</string>
    <string name="turn_on_btn">Turn On</string>
    <string name="turn_off_btn">Turn Off</string>
    <!-- Devices -->
    <string name="no_available_devices">No available devices nearby</string>
    <!-- Settings -->
    <string name="enable_notification">Enable push notifications</string>
    <string name="language">Language</string>
    <string name="feedback_btn_text_title">Send</string>
    <string name="about_app">About app</string>
    <string name="push_notification_text_title">Push notifications</string>
    <string name="feedback">Feedback</string>
</resources>
