<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="notifications"
        app:title="@string/notification"
        app:icon="@drawable/ic_notification_32dp"/>

    <ListPreference
        app:key="language"
        app:title="@string/language"
        app:icon="@drawable/ic_language_32dp"
        app:entries="@array/listOptions"
        app:entryValues="@array/listValues"
        app:summary="%s"/>

    <PreferenceCategory>
        <Preference
            app:key="feedback"
            app:title="@string/feedback"
            app:icon="@drawable/ic_feedback_32dp"/>

        <Preference
            app:key="about_app"
            app:title="@string/about_app"
            app:icon="@drawable/ic_info_outline_32dp"/>

    </PreferenceCategory>

</PreferenceScreen>